fix link  height and gap

--- a/sass/pages/_intro.scss
+++ b/sass/pages/_intro.scss
@@ -7,13 +7,14 @@
   h2 {
     font-size: 30px;
     font-weight: 800;
-    margin: 15px 56px;
+    margin: 15px 40px;
     font-size: 28px;
   }
   p {
     font-weight: 300;
-    padding: 10px 20px 25px ;
+    padding: 10px 20px 25px;
     font-size: 16px;
+    margin-bottom: 30px;
   }
   &__btn {
     border-radius: 30px;
